--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website template was created by: Student's First Name Student's Last Name -->
+<!-- This website template was created by: Naiya Patel Date: 09/27/22 -->
 <html lang="en">
 
 <head>
@@ -105,6 +105,8 @@
 				</figure>
 
 			</div>
+
+				<div class = "copyright">
 
 		</main>
 
