--- a/index.html
+++ b/index.html
@@ -106,14 +106,17 @@
 
 			</div>
 
-				<div class = "copyright">
-
 		</main>
 
 		<!-- Use the footer area to add webpage footer content -->
 		<footer>
-			<p>&copy; Copyright 2021. All Rights Reserved.</p>
-			<p><a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
+
+			<div class = "copyright">
+				<p>&copy; Copyright 2021. All Rights Reserved.</p>
+				<p><a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
+			</div>
+
+			
 		</footer>
 
 	</div>
