--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!-- This website template was created by: Naiya Patel Date: 09/27/22 -->
 <html lang="en">
-
 <head>
-	<title>Forward Fitness Club</title>
+	<title>Complete Fitness - Free Trial | Forward Fitness Club</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name = "description" content = "The Forward Fitness Club is an elite fitness centre dedivated to helping cliets to achieve their fitness and nutrition goals"
 	<link href="https://fonts.googleapis.com/css?family=Francois+One|Roboto+Slab&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+
+	<!-- Skip to Content Link -->
+	<a class = "skip" href = "#content">Skip to Content</a>
 
 	<div id="container">
 
@@ -54,7 +57,7 @@
 		</div>
 
 		<!-- Use the main area to add the main content of the webpage -->
-		<main>
+		<main id = "content">
 
 			<div class="mobile">
 
@@ -116,7 +119,10 @@
 				<p><a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
 			</div>
 
-			
+			<div class = "social">
+					<a href = https://www.facebook.com/fedfitclub target = "_blank"><img src = "images/facebook-logo.png" alt = "black and white Facebook logo"></a>
+					<a href = https://twitter.com/fwdfitclub target = "blank"><img src = "images/twitter-logo.png" alt = "black and white Twitter logo"></a>
+			</div>
 		</footer>
 
 	</div>
